--- a/app/views/formulaires/charte.html.erb
+++ b/app/views/formulaires/charte.html.erb
@@ -28,7 +28,7 @@
       <%= f.input :charte, label: "Oui, je certifie avoir lu et accepté la charte de participation au Défi Zéro Déchet des Pros" %>
     </div>
      <div class="col-12 ml-3">
-      <%= f.input :cgv, label: "Oui, j’accepte les Conditions Générales de Vente de participation au Défi Zéro Déchet des Pros" %>
+      <%= f.input :cgv, label: "Oui, j’accepte les #{link_to 'Conditions Générales de Vente', cgv_path, target: :blank, class:"cool-link"} de participation au Défi Zéro Déchet des Pros".html_safe %>
     </div>
     <div class="d-flex justify-content-around mb-5 mt-4">
       <%= link_to "< Précédent", previous_wizard_path, class:"btn btn-primary bold" %>
@@ -36,3 +36,4 @@
     </div>
   <% end %>
 </div>
+
