--- a/app/views/pages/politique_de_confidentialite.html.erb
+++ b/app/views/pages/politique_de_confidentialite.html.erb
@@ -86,6 +86,51 @@
 
     <h3>Article 9 –Contactez-nous</h3>
     <p class="mb-5">Pour toute question, information sur les produits ou sur le site lui même, vous pouvez laissez un message à l’adresse suivante : pauline.r@ekologeek.com</p>
+
+    <h3>Article 10 - Protection des données </h3>
+
+    <h5>10.1- Collecte des données</h5>
+    <p>Vos données sont collectées par l’association ekolo[geek].</p>
+    <p>Une donnée à caractère personnel désigne toute information concernant une personne physique identifiée ou identifiable ; est réputée identifiable une personne qui peut être identifiée, directement ou indirectement, notamment par référence à un nom, un numéro d’identification ou à un ou plusieurs éléments spécifiques, propres à son identité physique, physiologique, génétique, psychique, économique, culturelle ou sociale.</p>
+    <p>Les données fournies par le référent sur son espace représentent son établissement et sont transmises de façon volontaire.</p>
+    <p>Ekolo[geek] ne pourra en aucun cas être tenu responsable de l’exactitude des données indiquées.
+    Ekolo[geek]  n’est pas voué à intervenir sur les comptes créés par les participants, mais peut être amené à le faire sur demande du référent.</p>
+
+
+    <h5>10.2- Droit d’accès, de rectification et de déréférencement de vos données</h5>
+    <p>En application de la réglementation applicable aux données à caractère personnel, les utilisateurs disposent des droits suivants :</p>
+    <p>Le droit d’accès : ils peuvent exercer leur droit d’accès pour connaître les données personnelles les concernant, en écrivant à l’adresse électronique suivante. Dans ce cas, avant la mise en œuvre de ce droit, le site peut demander une preuve de l’identité de l’utilisateur afin d’en vérifier l’exactitude.</p>
+    <p>Le droit de rectification : si les données à caractère  personnel détenues par le site sont inexactes, ils peuvent demander la mise à jour des informations.  </p>
+    <p>Le droit de suppression des données : les utilisateurs peuvent demander la suppression de leurs données à caractère personnel, conformément aux lois applicables en matière de protection des données.</p>
+    <p>Le droit à la limitation du traitement : les utilisateurs peuvent demander au site de limiter le traitement des données personnelles conformément aux hypothèses prévues par le RGPD</p>
+    <p>Le droit de s’opposer au traitement des données : les utilisateurs peuvent s’opposer à ce que ses données soient  traitées conformément aux aux hypothèses prévues par le RGPD.  </p>
+    <p>Le droit à la portabilité : ils peuvent réclamer que le site leur remette des données personnelles qui lui ont fourni pour les transmettre à une nouvelle plateforme. </p>
+
+    <p>Vous pouvez exercer ces droits en nous contactant à l’adresse suivante : pauline.r@ekologeek.com</p>
+    <p>Toute demande doit être accompagnée de la photocopie d’un titre d’identité en cours de validité signé et faire mention de l’adresse à laquelle l’éditeur pourra contacter le demandeur. La réponse sera adressée dans le mois suivant la réception de la demande. Ce délai d’un mois peut être prolongé de deux mois si la complexité de la demande et/ou le nombre de demandes l’exigent.</p>
+
+    <p>De plus, et depuis la loi n°2016-1321 du 7 octobre 2016, les personnes qui le souhaitent, ont la possibilité d’organiser le sort de leurs données après leur décès.</p>
+
+    <p>Les utilisateurs peuvent aussi introduire une réglementation auprès de la CNIL sur le site https://www.cnil.fr</p>
+
+    <p>Nous vous recommandons de nous contacter dans un premier temps avant de déposer une réclamation auprès de la CNIL, car nous sommes à votre entière disposition afin de résoudre votre problème.</p>
+
+    <h5>10.3- Utilisation des données</h5>
+    <p>Les données collectées lors de l’inscription sont confidentielles.</p>
+    <p>Aucune donnée à caractère personnel (notamment noms, coordonnées, ou résultats des personnes) ne peut être divulguée sans demande et accord explicite. Aucune utilisation commerciale ne pourra être faite des données collectées sur le site defi-zero-dechet-pro.com.</p>
+
+    <p>Les données personnelles, collectées auprès des utilisateurs ont pour objectif la mise à disposition des services proposés par l’association, leur amélioration et le maintien d’un environnement sécurité. La base légale des traitements est celle de l’exécution du contrat entre l’utilisateur et l’association.</p>
+
+    <p>Ekolo[geek] se réserve le droit d’utiliser les résultats de l’établissement participant dans sa communication, pour mettre en valeur le Défi et ses participants, et rendre compte des résultats du projet.</p>
+
+    <h5>10.4- Politique de conservation des données</h5>
+
+    <p>L’association conserve vos données pour la durée nécessaire afin de vous fournir ses services ou de vous fournir une assistance.</p>
+
+    <p>Dans la mesure raisonnablement nécessaire requise pour satisfaire aux obligations légales ou réglementaires, régler des litiges, empêcher des fraudes et abus ou appliquer nos modalités et conditions, nous pouvons également conserver certaines de vos informations, si nécessaire, même après que vous ayez fermé votre compte ou que nous n’avons plus besoin de vous fournir des services.</p>
+
+
+
   </div>
   <%= render 'shared/footer' %>
 </div>
