--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -25,7 +25,7 @@
             <%= link_to "Participer au Défi Zéro Déchet des pros", pourquoi_path(anchor: "pourquoi2"), class:"anchor dropdown-item text-primary"%>
           </div>
         <% else %>
-          <a class="nav-link dropdown-toggle" href="/pourquoi" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" href="/pourquoi" id="navbarDropdownMenuLink" role="button" aria-haspopup="true" aria-expanded="false">
             POURQUOI
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -120,7 +120,7 @@
               <%= link_to  "Déconnexion", destroy_user_session_path, method: :delete, class:"dropdown-item text-primary"%>
             </div>
           <% end %>
-        
+
         <% else %>
           <% if mobile_device == "mobile" %>
             <%= link_to "Connexion", user_session_path, class:"nav-link text-light-gray" %>
@@ -139,7 +139,7 @@
                 <div class="checkbox d-flex align-items-center">
                   <%= f.check_box :remember_me %><%= f.label :remember_me %>
                 </div>
-                <%= f.submit 'Login', class: "btn btn-primary" %> 
+                <%= f.submit 'Login', class: "btn btn-primary" %>
               <% end %>
             </div>
           <% end %>
