--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -100,14 +100,14 @@
         <%= link_to  "Contact", contact_path, class:"nav-link text-light-gray pl-lg-3 position borderus pl-lg-5"%>
       </li>
 
-      <li class="nav-item m-3 dropdown bold-link ">
+      <li class="nav-item m-3 dropdown bold-link " >
         <% if user_signed_in? %>
 
           <% if mobile_device == "mobile" %>
             <a class="nav-link dropdown-toggle" role="button" aria-haspopup="true" data-toggle="dropdown" aria-expanded="false">
               Mon compte
             </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
               <%= link_to  "Mon compte", user_path(current_user), class:"dropdown-item text-primary"%>
               <%= link_to  "Déconnexion", destroy_user_session_path, method: :delete, class:"dropdown-item text-primary"%>
             </div>
@@ -115,12 +115,12 @@
             <a class="nav-link dropdown-toggle" href="/companies/new" id="navbarDropdownMenuLink" role="button" aria-haspopup="true" aria-expanded="false">
               Mon compte
             </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
               <%= link_to  "Mon compte", user_path(current_user), class:"dropdown-item text-primary"%>
               <%= link_to  "Déconnexion", destroy_user_session_path, method: :delete, class:"dropdown-item text-primary"%>
             </div>
           <% end %>
-        
+
         <% else %>
           <% if mobile_device == "mobile" %>
             <%= link_to "Connexion", user_session_path, class:"nav-link text-light-gray" %>
@@ -128,7 +128,7 @@
             <a class="nav-link dropdown-toggle connexion-link" href="/companies/new" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Connexion
             </a>
-            <div class="dropdown-menu dropdown-connexion" aria-labelledby="navbarDropdownMenuLink">
+            <div class="dropdown-menu dropdown-menu-right dropdown-connexion" aria-labelledby="navbarDropdownMenuLink">
               <%= form_for(:user, :url => session_path(:user), html: { class: "navbar-form navbar-right form-inline d-flex flex-column justify-content-start" }) do |f| %>
                 <div class="form-group">
                   <%= f.text_field :email, :placeholder => "Email", class: "form-control" %>
@@ -139,7 +139,7 @@
                 <div class="checkbox d-flex align-items-center">
                   <%= f.check_box :remember_me %><%= f.label :remember_me %>
                 </div>
-                <%= f.submit 'Login', class: "btn btn-primary" %> 
+                <%= f.submit 'Login', class: "btn btn-primary" %>
               <% end %>
             </div>
           <% end %>
