--- a/app/views/shared/_navbar_connected.html.erb
+++ b/app/views/shared/_navbar_connected.html.erb
@@ -107,7 +107,7 @@
         <a class="nav-link dropdown-toggle connexion-link" style="color: white;" id="" role="button" aria-haspopup="true" data-toggle="dropdown" aria-expanded="false">
           Mon compte
         </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
           <%= link_to  "Mon compte", user_path(current_user), class:"dropdown-item text-primary"%>
           <%= link_to  "Déconnexion", destroy_user_session_path, method: :delete, class:"dropdown-item text-primary"%>
         </div>
@@ -115,7 +115,7 @@
         <a class="nav-link dropdown-toggle connexion-link" style="color: white;" href="/companies/new" id="navbarDropdownMenuLink" role="button" aria-haspopup="true" aria-expanded="false">
           Mon compte
         </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
           <%= link_to  "Mon compte", user_path(current_user), class:"dropdown-item text-primary"%>
           <%= link_to  "Déconnexion", destroy_user_session_path, method: :delete, class:"dropdown-item text-primary"%>
         </div>
@@ -143,7 +143,7 @@
         <a class="nav-link dropdown-toggle" style="color: white;" href="/companies/new" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Connexion
         </a>
-        <div class="dropdown-menu dropdown-connexion" aria-labelledby="navbarDropdownMenuLink">
+        <div class="dropdown-menu dropdown-menu-right dropdown-connexion" aria-labelledby="navbarDropdownMenuLink">
           <%= form_for(:user, :url => session_path(:user), html: { class: "navbar-form navbar-right form-inline d-flex flex-column justify-content-start" }) do |f| %>
           <div class="form-group">
             <%= f.text_field :email, :placeholder => "Email", class: "form-control" %>
