--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,10 @@
-<div class="wrapper">
-  <div class="container mt-5">
+<% if current_user %>
+  <div class="wrapper">
+    <div class="container mt-5">
+<% else %>
+  <div class="wrapper down">
+    <div class="container mt-5 pt-4">
+<% end %>
     <div class="d-flex mb-4">
       <%= link_to "Créer un article", new_article_path, class:"btn btn-primary" %>
       <%= link_to "Retour", root_path, class:"btn btn-link" %>
